Bug 342844 - Crop tool: inconveniences caused by its default settings
Summary: Crop tool: inconveniences caused by its default settings
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: unspecified
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-14 15:22 UTC by Tyson Tan
Modified: 2015-01-24 13:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2015-01-14 15:22:33 UTC
There is a few thing I would like to suggest in order to improve the usability of Crop tool:
1. Should set "Applies to" as _Image_ by default. 
2. "Grow" should be _unchecked_ by default.
3. "Decoration" should be _Thirds_ by default.

The reason behind the suggestions are: 
1. Crop tool, by the name, is used to shrink a picture. People get really confused if they cannot shrink a picture but only produce voids around the selection. 
2. Growing is a useful feature, but if we enable it by default, people can never get a clean crop at the edges, as Krita's Crop handler does not snap to canvas edges like PS. It will always cut more or less than we want. We don't use crop to grow a picture that often, either.
3. The Thirds decoration is widely used, and is actually a very helpful type of guidelines when enlarging or shrinking a picture.

Reproducible: Always
Comment 1 Dmitry Kazakov 2015-01-24 09:29:09 UTC
Git commit e40cf6ad01a481a250e5b449d5c52af0257fc213 by Dmitry Kazakov.
Committed on 24/01/2015 at 09:28.
Pushed by dkazakov into branch 'calligra/2.9'.

Changed default configuration values for crop tool

Thanks Tyson Tan for recommendations!

M  +5    -4    krita/plugins/tools/tool_crop/kis_tool_crop.cc

http://commits.kde.org/calligra/e40cf6ad01a481a250e5b449d5c52af0257fc213
Comment 2 Tyson Tan 2015-01-24 13:07:38 UTC
Thank you, Dmitry! :)