Changed default configuration values for crop tool

Thanks Tyson Tan for recommendations!

BUG:342844