krita/plugins/tools/tool_crop/kis_tool_crop.cc
@@ -137,12 +137,13 @@ void KisToolCrop::activate(ToolActivation toolActivation, const QSet<KoShape*> &
     setGrowCenter(configGroup.readEntry("growCenter", false));
     setForceRatio(configGroup.readEntry("forceRatio", false));
     setRatio(configGroup.readEntry("defaultRatio", 1.0));
-    setAllowGrow(configGroup.readEntry("allowGrow", true));
-    setDecoration(configGroup.readEntry("decoration", 0));
+    setAllowGrow(configGroup.readEntry("allowGrow", false));
 
+    // Default: thirds decoration
+    setDecoration(configGroup.readEntry("decoration", 1));
 
-    // can't save Enum values, so we ened to convert it to int.
-    setCropType(configGroup.readEntry("cropType") == 0 ? LayerCropType : ImageCropType);
+    // Default: crop the entire image
+    setCropType(configGroup.readEntry("cropType", 1) == 0 ? LayerCropType : ImageCropType);
 
     m_finalRect.setCropRect(image()->bounds());
 
